--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"devDependencies": {
 		"@babel/parser": "^7.28.5",
+		"@types/node": "^24.10.1",
 		"estree-walker": "^3.0.3",
 		"tsup": "^8.5.1",
 		"typescript": "^5.9.3",
