--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "vite-plugin-env-safe",
 	"version": "1.0.0",
-	"description": "A plugin for validating env variables like in django",
+	"description": "Zero-config environment variable validation for Vite projects using AST scanning.",
 	"main": "dist/index.cjs",
 	"module": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -11,17 +11,29 @@
 			"require": "./dist/index.cjs"
 		}
 	},
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "tsup src/index.ts --format cjs,esm --dts --external vite"
+		"build": "tsup src/index.ts --format cjs,esm --dts --external vite",
+		"prepublishOnly": "npm run build"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/AKASH-KUMAR-R/vite-plugin-env-safe.git"
 	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"keywords": [
+		"vite",
+		"vite-plugin",
+		"env",
+		"environment",
+		"validation",
+		"schema",
+		"safe"
+	],
+	"author": "Akash Kumar R",
+	"license": "MIT",
 	"type": "module",
 	"bugs": {
 		"url": "https://github.com/AKASH-KUMAR-R/vite-plugin-env-safe/issues"
